--- a/nft_swap_web/package.json
+++ b/nft_swap_web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nft_swap",
+  "name": "nft-swap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,24 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/web3": "^1.15.1",
-    "@polkadot/api": "^12.2.1",
-    "@polkadot/extension-dapp": "^0.49.3",
-    "@polkadot/ui-keyring": "^3.7.1",
-    "antd": "^5.19.3",
-    "next": "14.2.5",
-    "next-transpile-modules": "^10.0.1",
+    "@polkadot/api": "^13.2.1",
+    "@polkadot/extension-dapp": "^0.53.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.9.0",
+    "lucide-react": "^0.446.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "14.2.13",
+    "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
