--- a/nft_swap_web/package.json
+++ b/nft_swap_web/package.json
@@ -13,6 +13,7 @@
     "@polkadot/extension-dapp": "^0.53.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
