--- a/nft_swap_web/package.json
+++ b/nft_swap_web/package.json
@@ -19,7 +19,7 @@
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.446.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.13",
+    "next": "^14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
